Atualizacao Tela Produtos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.TetoVerde"
         tools:targetApi="31">
         <activity
+            android:name=".Produtos04"
+            android:exported="false" />
+        <activity
+            android:name=".Produtos03"
+            android:exported="false" />
+        <activity
+            android:name=".Produtos02"
+            android:exported="false" />
+        <activity
             android:name=".Produtos01"
             android:exported="false" />
         <activity
