--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.TetoVerde"
         tools:targetApi="31">
         <activity
+            android:name=".EsqueciSenha"
+            android:exported="false" />
+        <activity
+            android:name=".Login"
+            android:exported="false" />
+        <activity
             android:name=".ProdutoRepolhoVerde"
             android:exported="false" />
         <activity
